small fixes and optimization for script menu

--- a/res/css/roaext.css
+++ b/res/css/roaext.css
@@ -78,3 +78,23 @@ ul.avi {
   display: inline-block !important;
   width: auto;
 }
+#roaMenuContent {
+  margin: 0;
+  display: table;
+  width: 100%;
+}
+#roaMenuContent {
+  padding: 0;
+  list-style-type: none;
+}
+#roaMenuContent a {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none!important;
+}
+#roaMenuContent a {
+  line-height: 26px;
+  border-top: 1px solid #01b0aa;
+  background: #025251;
+}
