--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -99,3 +99,26 @@ ul.avi {
     width: auto;
   }
 }
+
+#roaMenuContent {
+  margin: 0;
+  display: table;
+  width: 100%;
+}
+#roaMenuContent {
+  padding: 0;
+  list-style-type: none;
+}
+
+#roaMenuContent a {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none!important;
+}
+
+#roaMenuContent a {
+  line-height: 26px;
+  border-top: 1px solid #01b0aa;
+  background: rgba(2,82,81,1);
+}
