--- a/res/css/roaext.css
+++ b/res/css/roaext.css
@@ -96,5 +96,5 @@ ul.avi {
 #roaMenuContent a {
   line-height: 26px;
   border-top: 1px solid #01b0aa;
-  background: #025251;
+  background-image: linear-gradient(to bottom, #025251 0, #012625 100%);
 }
