--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -120,5 +120,5 @@ ul.avi {
 #roaMenuContent a {
   line-height: 26px;
   border-top: 1px solid #01b0aa;
-  background: rgba(2,82,81,1);
+  background-image: linear-gradient(to bottom,rgba(2,82,81,1) 0,rgba(1,38,37,1) 100%);
 }
