--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -111,7 +111,7 @@ ul.avi {
 }
 
 #roaMenuContent a {
-  display: table-cell;
+  display: block;
   text-align: center;
   vertical-align: middle;
   text-decoration: none!important;
