--- a/res/css/roaext.css
+++ b/res/css/roaext.css
@@ -88,7 +88,7 @@ ul.avi {
   list-style-type: none;
 }
 #roaMenuContent a {
-  display: table-cell;
+  display: block;
   text-align: center;
   vertical-align: middle;
   text-decoration: none!important;
