renaming a few things

--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -122,3 +122,7 @@ ul.avi {
   border-top: 1px solid #01b0aa;
   background-image: linear-gradient(to bottom,rgba(2,82,81,1) 0,rgba(1,38,37,1) 100%);
 }
+
+.customTimerInput {
+  width: 20px;
+}
