--- a/res/css/roaext.css
+++ b/res/css/roaext.css
@@ -98,3 +98,6 @@ ul.avi {
   border-top: 1px solid #01b0aa;
   background-image: linear-gradient(to bottom, #025251 0, #012625 100%);
 }
+.customTimerInput {
+  width: 20px;
+}
