--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -123,6 +123,10 @@ ul.avi {
   background-image: linear-gradient(to bottom,rgba(2,82,81,1) 0,rgba(1,38,37,1) 100%);
 }
 
-.customTimerInput {
+.createTimerInput {
+  background-image: linear-gradient(to bottom,rgba(1,59,57,1) 0,rgba(1,33,32,1) 100%);
+}
+.createTimerInputTime {
+  .createTimerInput;
   width: 20px;
 }
