mroe css changes

--- a/res/css/roaext.css
+++ b/res/css/roaext.css
@@ -105,3 +105,9 @@ ul.avi {
   background-image: linear-gradient(to bottom, #013b39 0, #012120 100%);
   width: 20px;
 }
+.createTimerFeedback {
+  margin-top: 10px;
+  font-size: large;
+  text-align: center;
+  color: red;
+}
