--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -130,3 +130,10 @@ ul.avi {
   .createTimerInput;
   width: 20px;
 }
+
+.createTimerFeedback {
+  margin-top: 10px;
+  font-size: large;
+  text-align: center;
+  color: red;
+}
