--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -117,18 +117,28 @@ ul.avi {
   text-decoration: none!important;
 }
 
-#roaMenuContent a {
-  line-height: 26px;
-  border-top: 1px solid #01b0aa;
+.gradientBackground {
   background-image: linear-gradient(to bottom,rgba(2,82,81,1) 0,rgba(1,38,37,1) 100%);
 }
 
-.createTimerInput {
-  background-image: linear-gradient(to bottom,rgba(1,59,57,1) 0,rgba(1,33,32,1) 100%);
+#roaMenuContent a {
+  .gradientBackground;
+
+  line-height: 26px;
+  border-top: 1px solid #01b0aa;
 }
+
+.createTimerInput {
+  .gradientBackground;
+}
+
 .createTimerInputTime {
   .createTimerInput;
   width: 20px;
+}
+
+.createTimerCheckbox {
+  .gradientBackground;
 }
 
 .createTimerFeedback {
