timer working and switched the old house timer ui to use the new timer window

--- a/res/css/roaext.css
+++ b/res/css/roaext.css
@@ -117,3 +117,10 @@ ul.avi {
   text-align: center;
   color: red;
 }
+.timerLabel {
+  margin-left: 5px;
+}
+.timerDelete {
+  text-decoration: none!important;
+  margin-left: 1px;
+}
