--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -147,3 +147,15 @@ ul.avi {
   text-align: center;
   color: red;
 }
+
+.timerLabel {
+  margin-left: 5px;
+}
+
+.timerValue {
+}
+
+.timerDelete {
+  text-decoration: none!important;
+  margin-left: 1px;
+}
