--- a/res/css/roaext.less
+++ b/res/css/roaext.less
@@ -158,3 +158,67 @@ ul.avi {
   text-decoration: none!important;
   margin-left: 1px;
 }
+
+.moduleWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.chartWindow {
+  .moduleWindow;
+}
+
+.chartTab {
+  width: 100%;
+  height: 250px;
+  top: 240px;
+  position: absolute
+}
+
+.chartCategoryTab {
+  width: 100%;
+  height: 100%
+}
+
+.dungeonWindow{
+  .moduleWindow;
+}
+
+.dungeonWindowContent {
+  overflow-y: scroll;
+}
+
+.debugWindow{
+  .moduleWindow;
+}
+
+.debugWindowContent {
+  overflow-y: scroll;
+}
+
+.noteWindow {
+  .moduleWindow;
+}
+
+.gainWindow{
+  .moduleWindow;
+}
+
+.gainWindowContent {
+  overflow-y: scroll;
+}
+
+.settingsWindow{
+  .moduleWindow;
+}
+
+.settingsWindowContent {
+  overflow-y: scroll;
+}
+
+.timerEditorWindow{
+  .moduleWindow;
+}
