--- a/res/css/roaext.css
+++ b/res/css/roaext.css
@@ -121,3 +121,81 @@ ul.avi {
   text-decoration: none!important;
   margin-left: 1px;
 }
+.moduleWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.chartWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.chartTab {
+  width: 100%;
+  height: 250px;
+  top: 240px;
+  position: absolute;
+}
+.chartCategoryTab {
+  width: 100%;
+  height: 100%;
+}
+.dungeonWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.dungeonWindowContent {
+  overflow-y: scroll;
+}
+.debugWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.debugWindowContent {
+  overflow-y: scroll;
+}
+.noteWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.gainWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.gainWindowContent {
+  overflow-y: scroll;
+}
+.settingsWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.settingsWindowContent {
+  overflow-y: scroll;
+}
+.timerEditorWindow {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
