dungeon map rewrite, now works on the tracker data and won't reset on every reload

--- a/data/templates/dungeonWindow.html
+++ b/data/templates/dungeonWindow.html
@@ -3,6 +3,14 @@
         <h5 id="dungeonWindowTitle" class="center toprounder">Dungeon</h5>
         <span class="closeModal"><a id="dungeonWindowClose">×</a></span>
         <div id="dungeonWindowContent" class="mCSB_container" style="height: 100%">
+            <div id="dungeonLinksWrapper" class="center">
+                <a id="dungeonCtrlMap" class="active"><button class="btn btn-primary">Map</button></a>
+                <a id="dungeonCtrlStatistics" class=""><button class="btn btn-primary">Statistics</button></a>
+                <a id="dungeonCtrlData" class=""><button class="btn btn-primary">Data</button></a>
+            </div>
+            <div id="dungeonWndMap"></div>
+            <div id="dungeonWndStatistics"></div>
+            <div id="dungeonWndData"></div>
         </div>
     </div>
 </div>
