--- a/data/css/roaext.less
+++ b/data/css/roaext.less
@@ -167,6 +167,10 @@ ul.avi {
   left: 0;
 }
 
+.moduleWindowContent {
+  height: 100%
+}
+
 .chartWindow {
   .moduleWindow;
 }
@@ -221,4 +225,8 @@ ul.avi {
 
 .timerEditorWindow{
   .moduleWindow;
+}
+
+.gainFilterCheckbox {
+  .gradientBackground;
 }
