--- a/data/templates/chartWindow.html
+++ b/data/templates/chartWindow.html
@@ -1,5 +1,5 @@
 <div id="gameCharts" class="border2 ui-component chartWindow">
-    <div id="gameChartWindow" class="ui-element border2" style="height: 100%">
+    <div id="gameChartWindow" class="ui-element border2 moduleWindowContent">
         <h5 id="gameChartTitle" class="center toprounder">Charts</h5>
         <span class="closeModal"><a id="gameChartWindowClose">×</a></span>
         <div id="gameChartContent" class="mCSB_container" style="height: 100%">
@@ -7,7 +7,6 @@
                 <div id="gameChartReset" class="btn btn-primary">Reset</div>
                 <div id="gameChartRedraw" class="btn btn-primary">Redraw</div>
                 <div id="gameChartDebugData" class="btn btn-primary">Debug</div>
-                <div id="gameChartTimeMinute" class="btn btn-primary">Minute</div>
                 <div id="gameChartTimeHour" class="btn btn-primary">Hour</div>
                 <div id="gameChartTimeDay" class="btn btn-primary">Day</div>
                 <div id="gameChartTimeMonth" class="btn btn-primary">Month</div>
