--- a/data/templates/debugWindow.html
+++ b/data/templates/debugWindow.html
@@ -1,5 +1,5 @@
 <div id="debug" class="border2 ui-component debugWindow">
-    <div id="debugWindow" class="ui-element border2" style="height: 100%">
+    <div id="debugWindow" class="ui-element border2 moduleWindowContent">
         <h5 id="debugWindowTitle" class="center toprounder">Debug</h5>
         <span class="closeModal"><a id="debugWindowClose">×</a></span>
         <div id="debugWindowContent" class="mCSB_container" style="height: 100%">
