--- a/data/templates/dungeonWindow.html
+++ b/data/templates/dungeonWindow.html
@@ -1,5 +1,5 @@
 <div id="roaDungeon" class="border2 ui-component dungeonWindow">
-    <div id="dungeonWindow" class="ui-element border2" style="height: 100%">
+    <div id="dungeonWindow" class="ui-element border2 moduleWindowContent">
         <h5 id="dungeonWindowTitle" class="center toprounder">Dungeon</h5>
         <span class="closeModal"><a id="dungeonWindowClose">×</a></span>
         <div id="dungeonWindowContent" class="mCSB_container" style="height: 100%">
