--- a/data/templates/settingsWindow.html
+++ b/data/templates/settingsWindow.html
@@ -1,5 +1,5 @@
 <div id="roaSettings" class="border2 ui-component settingsWindow">
-    <div id="settingsWindow" class="ui-element border2" style="height: 100%">
+    <div id="settingsWindow" class="ui-element border2 moduleWindowContent">
         <h5 id="settingsWindowTitle" class="center toprounder">Settings</h5>
         <span class="closeModal"><a id="settingsWindowClose">×</a></span>
         <div id="settingsWindowContent" class="mCSB_container" style="height: 100%">
