--- a/data/templates/chartWindow.html
+++ b/data/templates/chartWindow.html
@@ -1,5 +1,5 @@
-<div id="gameCharts" class="border2 ui-component chartWindow">
-    <div id="gameChartWindow" class="ui-element border2 moduleWindowContent">
+<div id="gameCharts" class="border2 ui-component roaext-chart-window">
+    <div id="gameChartWindow" class="ui-element border2 roaext-module-window-content">
         <h5 id="gameChartTitle" class="center toprounder">Charts</h5>
         <span class="closeModal"><a id="gameChartWindowClose">×</a></span>
         <div id="gameChartContent" class="mCSB_container" style="height: 100%">
@@ -16,14 +16,14 @@
                     <span>bytes</span>
                 </div>
             </div>
-            <div id="gameChartCategoryTabs" style="height: 100%">
+            <div id="gameroaext-chart-category-tabs" style="height: 100%">
                 <div class="col-xs-12 col-md-12 mt10" style="display: block">
                     <div id="toggleGameChartPlayer" class="btn btn-primary">Player Charts</div>
                     <div id="toggleGameChartStats" class="btn btn-primary">Game Stats</div>
                     <div id="toggleGameChartMarket" class="btn btn-primary">Market</div>
                 </div>
 
-                <div id="gameChartPlayerTabs" class="chartCategoryTab">
+                <div id="gameChartPlayerTabs" class="roaext-chart-category-tab">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartPlayerBattleXP" class="btn btn-primary">Battle XP</div>
                         <div id="toggleChartPlayerHarvestXP" class="btn btn-primary">Harvest XP</div>
@@ -39,22 +39,22 @@
                         <div id="toggleChartPlayerIron" class="btn btn-primary">Iron</div>
                         <div id="toggleChartPlayerStone" class="btn btn-primary">Stone</div>
                     </div>
-                    <div id="chartPlayerBattleXP" class="chartTab"></div>
-                    <div id="chartPlayerHarvestXP" class="chartTab"></div>
-                    <div id="chartPlayerCraftingXP" class="chartTab"></div>
-                    <div id="chartPlayerGold" class="chartTab"></div>
-                    <div id="chartPlayerGoldLooted" class="chartTab"></div>
-                    <div id="chartPlayerPlatinum" class="chartTab"></div>
-                    <div id="chartPlayerCrystal" class="chartTab"></div>
-                    <div id="chartPlayerMaterial" class="chartTab"></div>
-                    <div id="chartPlayerFragment" class="chartTab"></div>
-                    <div id="chartPlayerFood" class="chartTab"></div>
-                    <div id="chartPlayerWood" class="chartTab"></div>
-                    <div id="chartPlayerIron" class="chartTab"></div>
-                    <div id="chartPlayerStone" class="chartTab"></div>
+                    <div id="chartPlayerBattleXP" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerHarvestXP" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerCraftingXP" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerGold" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerGoldLooted" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerPlatinum" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerCrystal" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerMaterial" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerFragment" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerFood" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerWood" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerIron" class="roaext-chart-tab"></div>
+                    <div id="chartPlayerStone" class="roaext-chart-tab"></div>
                 </div>
 
-                <div id="gameChartStatsTabs" class="chartCategoryTab">
+                <div id="gameChartStatsTabs" class="roaext-chart-category-tab">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartMonsterSlain" class="btn btn-primary">Monsters Slain</div>
                         <div id="toggleChartGoldLooted" class="btn btn-primary">Gold Looted</div>
@@ -67,19 +67,19 @@
                         <div id="toggleChartResourcesHarvested" class="btn btn-primary">Resources Harvested</div>
                         <div id="toggleChartItemsFound" class="btn btn-primary">Items Found</div>
                     </div>
-                    <div id="chartMonsterSlain" class="chartTab"></div>
-                    <div id="chartGoldLooted" class="chartTab"></div>
-                    <div id="chartGoldInGame" class="chartTab"></div>
-                    <div id="chartResourcesInGame" class="chartTab"></div>
-                    <div id="chartPlatinumInGame" class="chartTab"></div>
-                    <div id="chartMaterialInGame" class="chartTab"></div>
-                    <div id="chartFragmentInGame" class="chartTab"></div>
-                    <div id="chartHarvests" class="chartTab"></div>
-                    <div id="chartResourcesHarvested" class="chartTab"></div>
-                    <div id="chartItemsFound" class="chartTab"></div>
+                    <div id="chartMonsterSlain" class="roaext-chart-tab"></div>
+                    <div id="chartGoldLooted" class="roaext-chart-tab"></div>
+                    <div id="chartGoldInGame" class="roaext-chart-tab"></div>
+                    <div id="chartResourcesInGame" class="roaext-chart-tab"></div>
+                    <div id="chartPlatinumInGame" class="roaext-chart-tab"></div>
+                    <div id="chartMaterialInGame" class="roaext-chart-tab"></div>
+                    <div id="chartFragmentInGame" class="roaext-chart-tab"></div>
+                    <div id="chartHarvests" class="roaext-chart-tab"></div>
+                    <div id="chartResourcesHarvested" class="roaext-chart-tab"></div>
+                    <div id="chartItemsFound" class="roaext-chart-tab"></div>
                 </div>
 
-                <div id="gameChartMarketTabs" class="chartCategoryTab">
+                <div id="gameChartMarketTabs" class="roaext-chart-category-tab">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartMarketCrystals" class="btn btn-primary">Crystals</div>
                         <div id="toggleChartMarketPlatinum" class="btn btn-primary">Platinum</div>
@@ -90,14 +90,14 @@
                         <div id="toggleChartMarketMaterial" class="btn btn-primary">Material</div>
                         <div id="toggleChartMarketFragment" class="btn btn-primary">Fragments</div>
                     </div>
-                    <div id="chartMarketCrystals" class="chartTab"></div>
-                    <div id="chartMarketPlatinum" class="chartTab"></div>
-                    <div id="chartMarketFood" class="chartTab"></div>
-                    <div id="chartMarketWood" class="chartTab"></div>
-                    <div id="chartMarketIron" class="chartTab"></div>
-                    <div id="chartMarketStone" class="chartTab"></div>
-                    <div id="chartMarketMaterial" class="chartTab"></div>
-                    <div id="chartMarketFragment" class="chartTab"></div>
+                    <div id="chartMarketCrystals" class="roaext-chart-tab"></div>
+                    <div id="chartMarketPlatinum" class="roaext-chart-tab"></div>
+                    <div id="chartMarketFood" class="roaext-chart-tab"></div>
+                    <div id="chartMarketWood" class="roaext-chart-tab"></div>
+                    <div id="chartMarketIron" class="roaext-chart-tab"></div>
+                    <div id="chartMarketStone" class="roaext-chart-tab"></div>
+                    <div id="chartMarketMaterial" class="roaext-chart-tab"></div>
+                    <div id="chartMarketFragment" class="roaext-chart-tab"></div>
                 </div>
             </div>
         </div>
