--- a/data/templates/dungeonWindow.html
+++ b/data/templates/dungeonWindow.html
@@ -1,8 +1,8 @@
-<div id="roaDungeon" class="border2 ui-component dungeonWindow">
-    <div id="dungeonWindow" class="ui-element border2 moduleWindowContent">
+<div id="roaDungeon" class="border2 ui-component roaext-dungeon-window">
+    <div id="dungeonWindow" class="ui-element border2 roaext-module-window-content">
         <h5 id="dungeonWindowTitle" class="center toprounder">Dungeon</h5>
         <span class="closeModal"><a id="dungeonWindowClose">×</a></span>
-        <div id="dungeonWindowContent" class="mCSB_container" style="height: 100%">
+        <div id="dungeonWindowContent" class="mCSB_container roaext-dungeon-window-content" style="height: 100%">
             <div id="dungeonLinksWrapper" class="center">
                 <a id="dungeonCtrlMap" class="active"><button class="btn btn-primary">Map</button></a>
                 <a id="dungeonCtrlStatistics" class=""><button class="btn btn-primary">Statistics</button></a>
