--- a/data/templates/noteWindow.html
+++ b/data/templates/noteWindow.html
@@ -1,5 +1,5 @@
-<div id="notes" class="border2 ui-component noteWindow">
-    <div id="noteWindow" class="ui-element border2 moduleWindowContent">
+<div id="notes" class="border2 ui-component roaext-note-window">
+    <div id="noteWindow" class="ui-element border2 roaext-module-window-content">
         <h5 id="noteTitle" class="center toprounder">Notes</h5>
         <span class="closeModal"><a id="noteWindowClose">×</a></span>
         <div id="noteContent" class="mCSB_container" style="height: 100%">
