--- a/data/templates/timerEditor.html
+++ b/data/templates/timerEditor.html
@@ -4,7 +4,7 @@
         <span class="closeModal"><a id="timerEditorWindowClose">×</a></span>
         <div id="timerEditorContent" class="mCSB_container" style="height: 100%">
             <div id="activeCustomTimers">
-                <table class="avi" style="margin:auto">
+                <table class="roaext" style="margin:auto">
                     <thead>
                     <tr>
                         <th colspan="3">
@@ -22,7 +22,7 @@
                 </table>
             </div>
             <div id="createNewCustomTimer" style="margin-top: 10px">
-                <table class="avi" style="margin:auto">
+                <table class="roaext" style="margin:auto">
                     <tr>
                         <th>
                             <input id="customTimerOptName" class="createTimerInput"> Name</input>
