--- a/data/templates/debugWindow.html
+++ b/data/templates/debugWindow.html
@@ -1,9 +1,9 @@
-<div id="debug" class="border2 ui-component debugWindow">
-    <div id="debugWindow" class="ui-element border2 moduleWindowContent">
+<div id="debug" class="border2 ui-component roaext-debug-window">
+    <div id="debugWindow" class="ui-element border2 roaext-module-window-content">
         <h5 id="debugWindowTitle" class="center toprounder">Debug</h5>
         <span class="closeModal"><a id="debugWindowClose">×</a></span>
-        <div id="debugWindowContent" class="mCSB_container" style="height: 100%">
-            <table class="avi" style="margin:auto">
+        <div id="debugWindowContent" class="mCSB_container roaext-debug-window-content" style="height: 100%">
+            <table id="debugWindowTable" class="sorted_table">
                 <thead>
                 <tr>
                     <th colspan="3">
