--- a/data/templates/settingsWindow.html
+++ b/data/templates/settingsWindow.html
@@ -1,8 +1,8 @@
-<div id="roaSettings" class="border2 ui-component settingsWindow">
-    <div id="settingsWindow" class="ui-element border2 moduleWindowContent">
+<div id="roaSettings" class="border2 ui-component roaext-settings-window">
+    <div id="settingsWindow" class="ui-element border2 roaext-module-window-content">
         <h5 id="settingsWindowTitle" class="center toprounder">Settings</h5>
         <span class="closeModal"><a id="settingsWindowClose">×</a></span>
-        <div id="settingsWindowContent" class="mCSB_container" style="height: 100%">
+        <div id="settingsWindowContent" class="mCSB_container roaext-settings-window-content" style="height: 100%">
         </div>
     </div>
 </div>
