gain window mostly working including filters

--- a/data/templates/playerGainWindow.html
+++ b/data/templates/playerGainWindow.html
@@ -3,8 +3,11 @@
         <h5 id="gainWindowTitle" class="center toprounder">Gains</h5>
         <span class="closeModal"><a id="gainWindowClose">×</a></span>
         <div id="gainWindowContent" class="mCSB_container roaext-gain-window-content" style="height: 100%">
-            <div id="gainSourceFilters" class="center"></div>
-            <div id="gainTypeFilters" class="center"></div>
+            <h5 class="center">Source Filters</h5>
+            <div id="gainSourceFilters" class="center" style="margin-top: 10px; margin-bottom: 20px;"></div>
+            <h5 class="center">Type Filters</h5>
+            <div id="gainTypeFilters" class="center" style="margin-bottom: 20px;"></div>
+            <div id="gainControls" class="col-xs-12 col-md-12 center mt10" style="margin-bottom: 20px; display: block"></div>
             <div id="gainContentTableWrapper">
                 <table id="gainContentTable" class="sorted_table" style="width: 90%; margin: 20px;">
                     <thead>
