more gain tracker fixes / changes

--- a/data/templates/playerGainWindow.html
+++ b/data/templates/playerGainWindow.html
@@ -16,7 +16,7 @@
                         <th>Type</th>
                         <th>Amount</th>
                         <th>#/hour</th>
-                        <th>#/hour (abs)</th>
+                        <th>#/hour (over 24h)</th>
                     </tr>
                     </thead>
                     <tbody id="gainContentTableBody">
