--- a/data/templates/timerEditor.html
+++ b/data/templates/timerEditor.html
@@ -1,4 +1,4 @@
-<div id="timerEditor" class="border2 ui-component timerEditorWindow">
+<div id="timerEditor" class="border2 ui-component roaext-time-editor-window">
     <div id="timerEditorWindow" class="ui-element border2" style="height: 100%">
         <h5 id="timerEditorTitle" class="center toprounder">Create Timer</h5>
         <span class="closeModal"><a id="timerEditorWindowClose">×</a></span>
@@ -25,16 +25,16 @@
                 <table class="roaext" style="margin:auto">
                     <tr>
                         <th>
-                            <input id="customTimerOptName" class="createTimerInput"> Name</input>
+                            <input id="customTimerOptName" class="roaext-timer-input"> Name</input>
                         </th>
                         <th>
-                            <input id="customTimerOptHour" class="createTimerInputTime" maxlength="2"> H</input>
-                            <input id="customTimerOptMinute" class="createTimerInputTime" maxlength="2"> M</input>
-                            <input id="customTimerOptSecond" class="createTimerInputTime" maxlength="2"> S</input>
+                            <input id="customTimerOptHour" class="roaext-timer-input-time" maxlength="2"> H</input>
+                            <input id="customTimerOptMinute" class="roaext-timer-input-time" maxlength="2"> M</input>
+                            <input id="customTimerOptSecond" class="roaext-timer-input-time" maxlength="2"> S</input>
                         </th>
                         <th>
-                            <input id="customTimerOptSound" type="checkbox" class="createTimerCheckbox">Sound</input>
-                            <input id="customTimerOptNotify" type="checkbox" class="createTimerCheckbox">Notification</input>
+                            <input id="customTimerOptSound" type="checkbox" class="roaext-timer-checkbox">Sound</input>
+                            <input id="customTimerOptNotify" type="checkbox" class="roaext-timer-checkbox">Notification</input>
                         </th>
                         <th>
                             <a id="customTimerCreateButton">Create</a>
@@ -42,7 +42,7 @@
                     </tr>
                 </table>
             </div>
-            <div id="createTimerFeedback" class="createTimerFeedback">
+            <div id="createTimerFeedback" class="roaext-timer-feedback">
             </div>
         </div>
     </div>
