fixed settings window not behaving properly

--- a/data/css/roaext.less
+++ b/data/css/roaext.less
@@ -5,7 +5,7 @@
 .roaext-module-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
