--- a/data/css/roaext.css
+++ b/data/css/roaext.css
@@ -4,7 +4,7 @@
 .roaext-module-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
@@ -105,7 +105,7 @@
 .roaext-chart-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
@@ -122,7 +122,7 @@
 .roaext-dungeon-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
@@ -132,7 +132,7 @@
 .roaext-debug-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
@@ -142,14 +142,14 @@
 .roaext-note-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
 .roaext-gain-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
@@ -166,7 +166,7 @@
 .roaext-settings-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
@@ -176,7 +176,7 @@
 .roaext-time-editor-window {
   width: 800px;
   height: 500px;
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
 }
