renamed id to avoid possible name conflicts

--- a/data/templates/settingsWindow.html
+++ b/data/templates/settingsWindow.html
@@ -1,4 +1,4 @@
-<div id="roaSettings" class="border2 ui-component roaext-settings-window">
+<div id="roaextSettings" class="border2 ui-component roaext-settings-window">
     <div id="settingsWindow" class="ui-element border2 roaext-module-window-content">
         <h5 id="settingsWindowTitle" class="center toprounder">Settings</h5>
         <span class="closeModal"><a id="settingsWindowClose">×</a></span>
