renamed gain window

--- a/data/templates/playerGainWindow.html
+++ b/data/templates/playerGainWindow.html
@@ -1,6 +1,6 @@
 <div id="roaPlayerGains" class="border2 ui-component roaext-gain-window">
     <div id="gainWindow" class="ui-element border2 roaext-module-window-content">
-        <h5 id="gainWindowTitle" class="center toprounder">Gains</h5>
+        <h5 id="gainWindowTitle" class="center toprounder">Gains & Loot</h5>
         <span class="closeModal"><a id="gainWindowClose">×</a></span>
         <div id="gainWindowContent" class="mCSB_container roaext-gain-window-content" style="height: 100%">
             <h5 class="center">Source Filters</h5>
